// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ cUOwyM"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ fVZbAb"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ jnIHyS"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ expxUB"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cELrCb"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ cUOwyM"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ fVZbAb"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ cUOwyM"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ fVZbAb"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ cUOwyM"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ fVZbAb"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ cUOwyM"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ fVZbAb"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc dWOyyj"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ cUOwyM"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ fVZbAb"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ lbrbYk"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc hgJXpw"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ dRkLGL"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ ldREAI"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ktmlgL"
      >
        <input
          className="sc-kvmHFZ cEYZZV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
